tests/NormalTests/paczka1/small_fuzzy/66937813.err
Error in line 6: S591 S591 68,6
Error in line 14: jPstYbTv A748 ÊÊ0,4
